* vm_eval.c (rb_mod_module_eval): fix the documentation of   class_eval to mention constant lookup.  [ruby-core:41718]   [Bug #5777]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@35056 b2dd03c8-39d4-4d8f-98ff-823fe69b080e